--- a/prepare_training.ipynb
+++ b/prepare_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,11 +59,11 @@
     "    hc = 384\n",
     "    img_h = cv2.resize(img, (hr, hc), interpolation=cv2.INTER_CUBIC)\n",
     "    img_x3 = cv2.resize(img_h, (lr, lc), interpolation=cv2.INTER_CUBIC)\n",
-    "    \n",
-    "    num_s = \"{:0>4d}\".format(num) \n",
-    "    cv2.imwrite('KAIR-master/trainsets/trainH/trainH/'+ num_s+ '.png', img_h)\n",
-    "    cv2.imwrite('KAIR-master/trainsets/trainL/trainL/'+ num_s+ 'x3.png', img_x3)\n",
-    "    \n",
+    "    num_s = \"{:0>4d}\".format(num)\n",
+    "    cv2.imwrite(\n",
+    "        'KAIR-master/trainsets/trainH/trainH/' + num_s + '.png', img_h)\n",
+    "    cv2.imwrite(\n",
+    "        'KAIR-master/trainsets/trainL/trainL/' + num_s + 'x3.png', img_x3)\n",
     "    num += 1"
    ]
   }
